console log and css change

--- a/src/app/ngx-editor/ngx-editor-toolbar/ngx-editor-toolbar.component.scss
+++ b/src/app/ngx-editor/ngx-editor-toolbar/ngx-editor-toolbar.component.scss
@@ -32,6 +32,10 @@
         transition: 0.2s ease;
       }
 
+      &:active {
+        background-color: lightslategrey;
+      }
+
       &:focus,
       &.focus {
         outline: 0;
